# SchemasAI-RAG

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  my_docs.txt  pyproject.toml
rag/: __main__.py  config.py
rag/Services/: base.py  document.py  rabbit.py
rag/agents/: base.py  coordinator.py  corrector.py  generator.py  schema_creator.py
rag/document/: processor.py
rag/message_broker/: rabbit.py  redis.py
rag/model/: base.py  embedding.py  provider.py  regular_llm.py  thinking_llm.py
rag/static/: IntegrationDoc.md  IntegrationDoc.txt  document_map.txt  prompts.json
rag/store/: adapters.py  vector.py
rag/tools/: json_valifator.py  retriever.py  semantic.py
