[project]
name = "SchemasAI-RAG"
version = "0.1.0"
description = ""
authors = [{ name = "dmitry", email = "kalibdune@yandex.ru" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "openai (>=1.74.0,<2.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langchain (==0.3.23)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "huggingface-hub (>=0.30.2,<0.31.0)",
    "llama-cpp-python (>=0.3.8,<0.4.0)",
    "langchain-ollama (==0.2.0)",
    "ollama (>=0.4.7,<0.5.0)",
]

[tool.poetry]
packages = [{ include = "rag" }]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
