[project]
name = "SchemasAI-RAG"
version = "0.1.0"
description = ""
authors = [{ name = "dmitry", email = "kalibdune@yandex.ru" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "langchain (==0.3.23)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "chromadb (>=1.0.5,<2.0.0)",
    "smolagents (>=1.14.0,<2.0.0)",
    "unstructured (>=0.17.2,<0.18.0)",
    "markdown (>=3.8,<4.0)",
]

[tool.poetry]
packages = [{ include = "rag" }]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
